# shakespeare-template

./: .gitignore  README.md  changelog.md  example.html  fromAFile.html  shakespeare-templates.cabal  test_template.hamlet
src/Text/Shakespeare/: Template.hs
src/Text/Shakespeare/Template/: Internal.hs
test/Text/Shakespeare/: .#TemplateSpec.hs  TemplateSpec.hs
