Name:                   shakespeare-templates
Version:                0.0.1
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Text.Shakespeare.Template
  Other-Modules:        Text.Shakespeare.Template.Internal
  Build-Depends:        base >= 4 && < 5
                        , shakespeare < 2.2
                        , text
                       , blaze-html

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , shakespeare
                      , text
                      , blaze-html
Source-Repository head
  Type:                 git
--  Location:             
